--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                                     <img src="./assets/2.png" title="" alt="">
                                 </div>
                                 <div class="nav social-icons justify-content-center">
-                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                                    <a href="https://www.facebook.com/sheismelib"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://twitter.com/MeliB_is"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/melib_is/"><i class="fab fa-instagram"></i></a>
+                                    <a href="www.linkedin.com/in/melissa-barrios-melibis"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://meliscript.wordpress.com/"><i class="fa-brands fa-wordpress-simple></i></a>
                                 </div>
                             </div>
                             <div class="info">
@@ -789,11 +789,11 @@
             <div class="row align-items-center">
                 <div class="col-md-6 m-10px-tb">
                     <div class="nav justify-content-center justify-content-md-start">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                        <a href="https://www.facebook.com/sheismelib"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/MeliB_is"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/melib_is/"><i class="fab fa-instagram"></i></a>
+                        <a href="www.linkedin.com/in/melissa-barrios-melibis"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://meliscript.wordpress.com/"><i class="fab fa-pinterest"></i></a>
                     </div>
                 </div>
                 <div class="col-md-6 m-10px-tb text-center text-md-right">
