--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <a href="https://twitter.com/MeliB_is"><i class="fab fa-twitter"></i></a>
                                     <a href="https://www.instagram.com/melib_is/"><i class="fab fa-instagram"></i></a>
                                     <a href="www.linkedin.com/in/melissa-barrios-melibis"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="https://meliscript.wordpress.com/"><i class="fa-brands fa-wordpress-simple></i></a>
+                                    <a href="https://meliscript.wordpress.com/"><i class="fa-brands fa-wordpress"></i></a>
                                 </div>
                             </div>
                             <div class="info">
@@ -793,7 +793,7 @@
                         <a href="https://twitter.com/MeliB_is"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/melib_is/"><i class="fab fa-instagram"></i></a>
                         <a href="www.linkedin.com/in/melissa-barrios-melibis"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://meliscript.wordpress.com/"><i class="fab fa-pinterest"></i></a>
+                        <a href="https://meliscript.wordpress.com/"><i class="fa-brands fa-wordpress"></i></a>
                     </div>
                 </div>
                 <div class="col-md-6 m-10px-tb text-center text-md-right">
