cambio en subtitulos

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="separated"></div>
                 <!-- End separated -->
                 <div class="title">
-                    <h3>Awards.</h3>
+                    <h3>Certificaciones</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 m-15px-tb">
@@ -358,7 +358,7 @@
         <section id="resume" class="section">
             <div class="container">
                 <div class="title">
-                    <h3>Experience.</h3>
+                    <h3>Experiencia.</h3>
                 </div>
                 <div class="resume-box">
                     <div class="resume-row">
@@ -420,7 +420,7 @@
                 <div class="separated"></div>
                 <!-- End separated -->
                 <div class="title">
-                    <h3>Education & Skills</h3>
+                    <h3>Educacion y habilidades</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 m-15px-tb">
@@ -483,7 +483,7 @@
         <section id="work" class="section dark-bg">
             <div class="container">
                 <div class="title">
-                    <h3>My Portfolio.</h3>
+                    <h3>Mi Portfolio.</h3>
                 </div>
                 <div class="portfolio-filter-01">
                     <ul class="filter nav">
