modificacion en seccion educacion y certificaciones

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                                 <img src="static/img/350x350.jpg" title="" alt="">
                             </div>
                             <div class="media-body">
-                                <h6>Honorable mension</h6>
-                                <p>Site of the day</p>
+                                <h6>Diplomas</h6>
+                                <p>Más de 100 reconocimientos en platzi </p>
                             </div>
                         </div>
                     </div>
@@ -266,8 +266,8 @@
                                 <img src="static/img/350x350.jpg" title="" alt="">
                             </div>
                             <div class="media-body">
-                                <h6>Honorable mension</h6>
-                                <p>Site of the day</p>
+                                <h6>Ucamp</h6>
+                                <p>Insignias otorgadas por Ucamp</p>
                             </div>
                         </div>
                     </div>
@@ -277,8 +277,8 @@
                                 <img src="static/img/350x350.jpg" title="" alt="">
                             </div>
                             <div class="media-body">
-                                <h6>Honorable mension</h6>
-                                <p>Site of the day</p>
+                                <h6>Cursos aprobados en:</h6>
+                                <p>Código facilito, udemy, free code camp entre otros</p>
                             </div>
                         </div>
                     </div>
@@ -367,14 +367,14 @@
                                 <div class="rb-left">
                                     <h6>Front-end Developer</h6>
                                     <label>WeLab | Remote</label>
-                                    <p>Jan 2019 - Present</p>
+                                    <p>Enero 2023 - Presente</p>
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
                             <div class="col-md-8 col-xl-9">
                                 <div class="rb-right">
-                                    <h6>About Company</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
+                                    <h6>Freelance</h6>
+                                    <p>He apoyado a pymes en la realizacion de páginas web, landing pages o mejorar la visibilidad de su página.</p>
                                 </div>
                             </div>
                         </div>
@@ -426,9 +426,14 @@
                     <div class="col-lg-4 m-15px-tb">
                         <ul class="aducation-box">
                             <li>
-                                <span>2010-2012</span>
-                                <h6>Graphic Designer</h6>
-                                <p>International Design Institute</p>
+                                <span>2023</span>
+                                <h6>Inteligencia artificial</h6>
+                                <p>Cursos platzi y google</p>
+                            </li>
+                            <li>
+                                <span>2022-2023</span>
+                                <h6>Programadora Full Stack</h6>
+                                <p>Ucamp</p>
                             </li>
                             <li>
                                 <span>2010-2012</span>
@@ -436,10 +441,17 @@
                                 <p>International Design Institute</p>
                             </li>
                             <li>
-                                <span>2010-2012</span>
-                                <h6>Graphic Designer</h6>
-                                <p>International Design Institute</p>
+                                <span>2019</span>
+                                <h6>Diseño gráfico</h6>
+                                <p>Escuela en línea</p>
                             </li>
+                            <li>
+                                <span> 2009-2014</span>
+                                <h6>Administración turística</h6>
+                                <p>Cieud</p>
+                            </li>
+                            </li>
+
                         </ul>
                     </div>
                     <div class="col-lg-7 ml-auto m-15px-tb">
@@ -451,7 +463,7 @@
                             </div>
                         </div><!-- /skill -->
                         <div class="skill-lt">
-                            <h6>WordPress</h6>
+                            <h6>Java Script</h6>
                             <span>75%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100">
@@ -459,16 +471,16 @@
                             </div>
                         </div><!-- /skill -->
                         <div class="skill-lt">
-                            <h6>Magento</h6>
-                            <span>86%</span>
+                            <h6>React</h6>
+                            <span>80%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
                         </div><!-- /skill -->
                         <div class="skill-lt">
-                            <h6>UI/UX</h6>
-                            <span>88%</span>
+                            <h6>Mongo Db</h6>
+                            <span>70%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
                                 </div>
