seccion contacto fallida

--- a/index.html
+++ b/index.html
@@ -750,16 +750,16 @@
                     <div class="col-lg-7 ml-auto m-15px-tb">
                         <div class="contact-form">
                             <h4>No dudes en contactarme 😉</h4>
-                            <form id="contact-form" method="POST">
+                            <form id="contact-form" method="POST" action="https://formsubmit.co/melissa.blecona@gmail.com">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input name="Name" id="name" placeholder="Nombre *" class="form-control" type="text">
+                                            <input name="text" id="name" placeholder="Nombre *" class="form-control" type="text"required>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <input name="Email" id="email" placeholder="Correo *" class="form-control" type="email">
+                                            <input name="email" id="email" placeholder="Correo *" class="form-control" type="email" required>
                                         </div>
                                     </div>
                                     <div class="col-12">
@@ -769,7 +769,7 @@
                                     </div>
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <textarea name="message" id="message" placeholder="Tu mensaje... *" rows="5" class="form-control"></textarea>
+                                            <textarea name="message" id="message" placeholder="Tu mensaje... *" rows="5" class="form-control"required></textarea>
                                         </div>
                                     </div>
                                     <div class="col-md-12">
