--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@
                             <div class="col-md-4 col-xl-3">
                                 <div class="rb-left">
                                     <h6>Front-end Developer</h6>
-                                    <label>WeLab | Remote</label>
-                                    <p>Enero 2023 - Presente</p>
+                                    <label>Trabajo remoto</label>
+                                   <!--  <p>Enero 2023 - Presente</p> -->
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
@@ -384,16 +384,16 @@
                             <div class="col-md-4 col-xl-3">
                                 <div class="rb-left">
                                     <h6>Front-end Developer</h6>
-                                    <label>WeLab | Remote</label>
-                                    <p>Jan 2019 - Present</p>
+                                    <label>Trabajo remoto</label>
+                                   <!--  <p>Jan 2019 - Present</p> -->
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
                             <div class="col-md-8 col-xl-9">
                                 <div class="rb-right">
-                                    <h6>About Company</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
-                                </div>
+                                    <h6>Freelance</h6>
+<!--                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
+ -->                                </div>
                             </div>
                         </div>
                     </div>
@@ -402,16 +402,16 @@
                             <div class="col-md-4 col-xl-3">
                                 <div class="rb-left">
                                     <h6>Front-end Developer</h6>
-                                    <label>WeLab | Remote</label>
-                                    <p>Jan 2019 - Present</p>
+                                    <label>Trabajo remoto</label>
+                                    <!-- <p>Jan 2019 - Present</p> -->
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
                             <div class="col-md-8 col-xl-9">
                                 <div class="rb-right">
-                                    <h6>About Company</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
-                                </div>
+                                    <h6>Freelance</h6>
+<!--                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
+ -->                                </div>
                             </div>
                         </div>
                     </div>
@@ -463,7 +463,7 @@
                             </div>
                         </div><!-- /skill -->
                         <div class="skill-lt">
-                            <h6>Java Script</h6>
+                            <h6>JavaScript</h6>
                             <span>75%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100">
