actualizacion de links

--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
             </div>
             <ul class="nav nav-menu">
                 <li>
-                    <a class="nav-link active" href="#home" data-toggle="tooltip" title="HOME">
+                    <a class="nav-link active" href="#home" data-toggle="tooltip" title="INICIO">
                         <i class="fas fa-house-damage"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#about" data-toggle="tooltip" title="ABOUT">
+                    <a class="nav-link" href="#about" data-toggle="tooltip" title="ACERCA DE">
                         <i class="far fa-address-card"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#resume" data-toggle="tooltip" title="RESUME">
+                    <a class="nav-link" href="#resume" data-toggle="tooltip" title="CURRICULUM">
                         <i class="far fa-file"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#work" data-toggle="tooltip" title="WORK">
+                    <a class="nav-link" href="#work" data-toggle="tooltip" title="TRABAJO">
                         <i class="fas fa-briefcase"></i>
                     </a>
                 </li>
-                <li>
+<!--                 <li>
                     <a class="nav-link" href="#blog" data-toggle="tooltip" title="BLOG">
                         <i class="fas fa-blog"></i>
                     </a>
-                </li>
+                </li> -->
                 <li>
-                    <a class="nav-link" href="#contactus" data-toggle="tooltip" title="CONTACT">
+                    <a class="nav-link" href="#contactus" data-toggle="tooltip" title="CONTACTO">
                         <i class="fas fa-id-card-alt"></i>
                     </a>
                 </li>
