--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="themepaa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Nairo - Portfolio Template">
-    <meta name="description" content="Nairo - Portfolio Template">
+    <meta name="keywords" content="Meli - Portfolio ">
+    <meta name="description" content="Meli - Portfolio ">
     <!-- title -->
     <title>Meli Barrios</title>
     <!-- Favicon -->
