--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <div class="separated"></div>
                 <!-- End separated -->
                 <div class="title">
-                    <h3>Educacion y habilidades</h3>
+                    <h3>Educación y habilidades</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 m-15px-tb">
@@ -436,9 +436,9 @@
                                 <p>Ucamp</p>
                             </li>
                             <li>
-                                <span>2010-2012</span>
-                                <h6>Graphic Designer</h6>
-                                <p>International Design Institute</p>
+                                <span>2018 - 2020</span>
+                                <h6>Marketing online</h6>
+                                <p>Platzi</p>
                             </li>
                             <li>
                                 <span>2019</span>
@@ -483,6 +483,30 @@
                             <span>70%</span>
                             <div class="skill-bar">
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div><!-- /skill -->
+                        <div class="skill-lt">
+                            <h6>Inglés b2</h6>
+                            <span>80%</span>
+                            <div class="skill-bar">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div><!-- /skill -->
+                        <div class="skill-lt">
+                            <h6>Photoshop</h6>
+                            <span>80%</span>
+                            <div class="skill-bar">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div><!-- /skill -->
+                        <div class="skill-lt">
+                            <h6>Lightroom</h6>
+                            <span>40%</span>
+                            <div class="skill-bar">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
                         </div><!-- /skill -->
@@ -764,7 +788,7 @@
                                     </div>
                                     <div class="col-12">
                                         <div class="form-group">
-                                            <input name="Subject" id="subject" placeholder="Asunto *" class="form-control" type="text">
+                                            <input name="submit" id="subject" placeholder="Asunto *" class="form-control" type="text">
                                         </div>
                                     </div>
                                     <div class="col-md-12">
@@ -774,7 +798,9 @@
                                     </div>
                                     <div class="col-md-12">
                                         <div class="send">
-                                            <button class="px-btn px-btn-white" onclick="send_mail()" type="button" value="Send"> enviar mensaje</button>
+                                            <button class="px-btn px-btn-white" onclick="send_mail()" type="button" value="Send"> 
+                                                Enviar
+                                            </button>
                                         </div>
                                         <span id="suce_message" class="text-success" style="display: none">Message Sent Successfully</span>
                                         <span id="err_message" class="text-danger" style="display: none">Message Sending Failed</span>
