se agrega imagen logo

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <i class="icon theme-bg icon-target"></i>
                             <div class="feature-content">
                                 <h5>Community Manager</h5>
-                                <p>Se me facilita realizar la creación de contenido y planes para llevar campañas organicar e inorganicas.</p>
+                                <p>Se me facilita realizar la creación de contenido y planes para llevar campañas organicas e inorganicas.</p>
                             </div>
                         </div>
                     </div>
@@ -462,6 +462,7 @@
                                 <div class="skill-bar-in" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div><!-- /skill -->
+
                         <div class="skill-lt">
                             <h6>JavaScript</h6>
                             <span>75%</span>
@@ -503,6 +504,14 @@
                             </div>
                         </div><!-- /skill -->
                         <div class="skill-lt">
+                            <h6>Figma</h6>
+                            <span>80%</span>
+                            <div class="skill-bar">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div><!-- /skill -->
+                        <div class="skill-lt">
                             <h6>Lightroom</h6>
                             <span>40%</span>
                             <div class="skill-bar">
@@ -519,15 +528,15 @@
         <section id="work" class="section dark-bg">
             <div class="container">
                 <div class="title">
-                    <h3>Mi Portfolio.</h3>
+                    <h3>Mi Portafolio.</h3>
                 </div>
                 <div class="portfolio-filter-01">
                     <ul class="filter nav">
                         <li class="active" data-filter="*">All</li>
-                        <li data-filter=".branding">Branding</li>
-                        <li data-filter=".photoshop">Photoshop</li>
-                        <li data-filter=".fashion">Fashion</li>
-                        <li data-filter=".product">Product</li>
+                        <li data-filter=".branding">Páginas</li>
+                        <li data-filter=".photoshop">Landig pages</li>
+                       <!--  <li data-filter=".fashion"></li>
+                        <li data-filter=".product"></li> -->
                     </ul>
                 </div> <!-- Portfolio Filter -->
                 <div class="portfolio-content grid-gutter-lg grid-col-3 lightbox-gallery">
@@ -643,7 +652,7 @@
                             </div>
                         </div>
                     </div> <!-- grid item -->
-                    <div class="grid-item product branding">
+              <!--       <div class="grid-item product branding">
                         <div class="portfolio-box-01">
                             <div class="portfolio-info">
                                 <h5 class="white-color font-weight-bold">Momb ios App</h5>
@@ -658,8 +667,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div> <!-- grid item -->
-                    <div class="grid-item fashion">
+                    </div> --> <!-- grid item -->
+                  <!--   <div class="grid-item fashion">
                         <div class="portfolio-box-01">
                             <div class="portfolio-info">
                                 <h5 class="white-color font-weight-bold">Momb ios App</h5>
@@ -674,7 +683,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> <!-- grid item -->
+                    </div> --> <!-- grid item -->
                 </div>
             </div>
         </section>
@@ -753,9 +762,9 @@
                 <div class="row">
                     <div class="col-lg-5 col-xl-4 m-15px-tb">
                         <div class="contact-info">
-                            <h4>¿Cuál es tu historia? ¡Contáctame!</h4>
-                            <p>Always available for freelancing if the right project comes along, Feel free to contact me.</p>
-                            <ul>
+                            <h4>¡Contáctame!</h4>
+<!--                             <p>Always available for freelancing if the right project comes along, Feel free to contact me.</p>
+ -->                            <ul>
                                 <li class="media">
                                     <i class="ti-map"></i>
                                     <span class="media-body">Puebla, México</span>
@@ -798,7 +807,7 @@
                                     </div>
                                     <div class="col-md-12">
                                         <div class="send">
-                                            <button class="px-btn px-btn-white" onclick="send_mail()" type="button" value="Send"> 
+                                            <button class="px-btn px-btn-white showAlert"  type="button" value="Send"> 
                                                 Enviar
                                             </button>
                                         </div>
@@ -857,6 +866,10 @@
     <script src="static/js/custom.js"></script>
     <script src="static/js/mail_send.js"></script>
     <!-- end -->
+    <!-- SweetAlert -->
+<!--     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/sweetAlert.js"></script>
+ -->
 </body>
 <!-- Body End -->
 
