se agregan imagenes de certificaciones y link de descargar cv

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <p class="lead">Full-stack Developer | Freelancer</p>
                             <p class="desc">Hola! Soy Melissa Barrios, soy <span class="text-main">Full Stack Developer</span>. Me gusta trabajar de manera remota y cuento con experiencia creando landings pages, paginas web y contenido con inteligencia artificial.</p>
                             <div class="btn-bar">
-                                <a class="font-alt" href="#">Descargar CV</a>
+                                <a class="font-alt" href="https://drive.google.com/file/d/1m0Pz8WDpPLeB61GLbqTJRGNozh1_HtDH/view?usp=drive_link">Descargar CV</a>
                             </div>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
                     <div class="col-lg-4 m-15px-tb">
                         <div class="feature-box-02 media align-items-center">
                             <div class="icon">
-                                <img src="static/img/350x350.jpg" title="" alt="">
+                                <img src="./assets/platzi.jpg" title="" alt="">
                             </div>
                             <div class="media-body">
                                 <h6>Diplomas</h6>
@@ -263,7 +263,7 @@
                     <div class="col-lg-4 m-15px-tb">
                         <div class="feature-box-02 media align-items-center">
                             <div class="icon">
-                                <img src="static/img/350x350.jpg" title="" alt="">
+                                <img src="./assets/ucamp.jpg" title="" alt="">
                             </div>
                             <div class="media-body">
                                 <h6>Ucamp</h6>
@@ -274,7 +274,7 @@
                     <div class="col-lg-4 m-15px-tb">
                         <div class="feature-box-02 media align-items-center">
                             <div class="icon">
-                                <img src="static/img/350x350.jpg" title="" alt="">
+                                <img src="./assets/codigof.jpg" title="" alt="">
                             </div>
                             <div class="media-body">
                                 <h6>Cursos aprobados en:</h6>
