modificacion en seccion experiencia

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                 <div class="rb-left">
                                     <h6>Front-end Developer</h6>
                                     <label>Trabajo remoto</label>
-                                   <!--  <p>Enero 2023 - Presente</p> -->
+                                     <p>Junio 2022 - Presente</p>
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
@@ -383,17 +383,24 @@
                         <div class="row">
                             <div class="col-md-4 col-xl-3">
                                 <div class="rb-left">
-                                    <h6>Front-end Developer</h6>
+                                    <h6>Freelance</h6>
                                     <label>Trabajo remoto</label>
-                                   <!--  <p>Jan 2019 - Present</p> -->
+                                    <p>Junio 2022 - Presente</p>
+
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
                             <div class="col-md-8 col-xl-9">
                                 <div class="rb-right">
-                                    <h6>Freelance</h6>
-<!--                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
- -->                                </div>
+                                    <h6>Freelance Community Manager/ Diseñadora</h6>
+                                    <ul> 
+                                        <li>Diseño y mejora de herramientas visuales de la marca.</li>
+                                        <li>Creación de contenido para redes sociales.</li>
+                                        <li>Implementación de campañas inorgánicas para crecimiento de marca.</li>
+                                        <li>Diseño Centrado en el Usuario</li>
+                                        <li>Mejora continua en elaboración de contenido.</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -401,17 +408,23 @@
                         <div class="row">
                             <div class="col-md-4 col-xl-3">
                                 <div class="rb-left">
-                                    <h6>Front-end Developer</h6>
+                                    <h6>Diseñadora/ Community Maneger</h6>
                                     <label>Trabajo remoto</label>
-                                    <!-- <p>Jan 2019 - Present</p> -->
+                                     <p>Enero 2022 - Presente</p>
                                     <div class="rb-time">Full Time</div>
                                 </div>
                             </div>
                             <div class="col-md-8 col-xl-9">
                                 <div class="rb-right">
                                     <h6>Freelance</h6>
+                                      <ul>
+                                        <li>Creación de elementos visuales de marca (logotipo)</li>
+                                        <li>Creación de carteles, invitaciones, posters etc.</li>
+                                        <li>Creación de contenido.</li>
+                                        <li>Implementación de estrategias de marketing y ventas.</li>
+                                    </ul>
 <!--                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor.</p>
- -->                                </div>
+ -->                               </div>
                             </div>
                         </div>
                     </div>
