actualizacion en imagen principal

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                     <label>melissa.blecona@gmail.com</label>
                 </div>
                 <div class="hb-lang">
-                    <ul class="nav">
+                  <!--   <ul class="nav">
                         <li class="active"><a href="#">ES</a></li>
                         <li><a href="#">FR</a></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
             <div class="container">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hb-me" style="background-image: url(assets/meli.jpeg);"></div>
+            <div class="hb-me" style="background-image: url(assets/melissab.jpeg);"></div>
         </section>
         <!-- End Home -->
         <!-- about us -->
