imagenes en zoom

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                             <h6>React</h6>
                             <span>80%</span>
                             <div class="skill-bar">
-                                <div class="skill-bar-in" role="progressbar" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
                         </div><!-- /skill -->
@@ -504,7 +504,15 @@
                             <h6>Inglés b2</h6>
                             <span>80%</span>
                             <div class="skill-bar">
-                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div><!-- /skill -->
+                        <div class="skill-lt">
+                            <h6>Inteligencia artificial</h6>
+                            <span>80%</span>
+                            <div class="skill-bar">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
                         </div><!-- /skill -->
@@ -512,7 +520,7 @@
                             <h6>Photoshop</h6>
                             <span>80%</span>
                             <div class="skill-bar">
-                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
                         </div><!-- /skill -->
@@ -520,7 +528,7 @@
                             <h6>Figma</h6>
                             <span>80%</span>
                             <div class="skill-bar">
-                                <div class="skill-bar-in" role="progressbar" aria-valuenow="88" aria-valuemin="0" aria-valuemax="100">
+                                <div class="skill-bar-in" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 </div>
                             </div>
                         </div><!-- /skill -->
@@ -562,7 +570,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/cattatack.png" title="" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/cattatack.png" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
@@ -578,7 +586,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/icodeyou.jpg" title="" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/icodeyou.jpg" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
@@ -594,7 +602,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/kamtaliventas2.jpg" title="Tienda de ropa" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/kamtaliventas2.jpg" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
@@ -610,7 +618,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/kamtali-react.jpg" title="Landing Page Ventas" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/kamtali-react.jpg" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
@@ -626,7 +634,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/wabisabi.png" title="" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/wabisabi.png" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
@@ -642,7 +650,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/creapteasy.jpg" title="" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/creapteasy.jpg" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
@@ -658,7 +666,7 @@
                             <div class="portfolio-img">
                                 <img src="./assets/trivia.jpg" title="" alt="">
                                 <div class="portfolio-icon">
-                                    <a href="static/img/650x650.jpg" class="gallery-link">
+                                    <a href="./assets/trivia.jpg" class="gallery-link">
                                         <span class="ti-plus"></span>
                                     </a>
                                 </div>
